--- a/machine.html
+++ b/machine.html
@@ -82,7 +82,7 @@ Learning background to build out WeWork's Machine Learning Platform. If you're
 <p>2 days ago ... Apply online for the job of ML (Machine Learning) and Backend Engineer at 
 MTailor.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lightmatter/3078e929-7571-4ab5-b2df-b22aef74838c'>Lightmatter - Machine Learning Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lightmatter/3078e929-7571-4ab5-b2df-b22aef74838c'>Lightmatter - Machine Learning Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -254,7 +254,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Pluralsight/743999692027295-machine-learning-engineer'>Pluralsight Machine Learning Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Pluralsight/743999692027295-machine-learning-engineer'>Pluralsight Machine Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -262,7 +262,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/qualtrics/jobs/1774038'>Job Application for iQ Machine Learning Engineer - Seattle  at Qualtrics</a></h5> 
+<h5><a href='https://boards.greenhouse.io/qualtrics/jobs/1774038'>Job Application for iQ Machine Learning Engineer - Seattle  at Qualtrics</a></h5> 
 <p><span class="badge badge-light">Seattle Seattle</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -298,7 +298,7 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/phdata/jobs/1461947'>Job Application for Machine Learning Operations Engineer at phData</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/phdata/jobs/1461947'>Job Application for Machine Learning Operations Engineer at phData</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -340,7 +340,7 @@ in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1774156'>Job Application for Senior Machine Learning Engineer at Twilio</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1774156'>Job Application for Senior Machine Learning Engineer at Twilio</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -353,7 +353,7 @@ job. Dor is a retail analytics startup that uses a first-of-its-kind hardware an
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/siftscience/jobs/1771754'>Job Application for Senior Software Engineer - Machine Learning Platform at Sift </a></h5> 
+<h5><a href='https://boards.greenhouse.io/siftscience/jobs/1771754'>Job Application for Senior Software Engineer - Machine Learning Platform at Sift </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -426,11 +426,11 @@ technologies to solve a variety of problems; Translate user stories and business
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/00ba0880-760f-43b2-bb66-4ea5d893b049'>Houzz - Research Engineer | Machine Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/houzz/00ba0880-760f-43b2-bb66-4ea5d893b049'>Houzz - Research Engineer | Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/houzz/78a7d404-5d5f-4d91-a1b0-3a0867fe3d46'>Houzz - Machine Learning Engineer | Personalization</a></h5> 
+<h5><a href='https://jobs.lever.co/houzz/78a7d404-5d5f-4d91-a1b0-3a0867fe3d46'>Houzz - Machine Learning Engineer | Personalization</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -456,7 +456,7 @@ Machine Learning. We are currently seeking a motivated human to join our team
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<h5><a href='https://oneinamil.workable.com/j/C2D0CAAF5F'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oneinamil.workable.com/j/C2D0CAAF5F'>OneinaMil - Jobs: Data Science Machine Learning Lead - Apply online</a></h5> 
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -468,7 +468,7 @@ Machine Learning. We are currently seeking a motivated human to join our team
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/getdor/4f47f0ad-584a-4c77-8e4f-b8feae3dd663'>Dor - Lead Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/getdor/4f47f0ad-584a-4c77-8e4f-b8feae3dd663'>Dor - Lead Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... We've created a cloud-connected people counter that works for retailers of all 
 sizes, and allows our customers to view and analyze their foot-traffic data. We're?...</p>
