--- a/deep-learning.html
+++ b/deep-learning.html
@@ -117,7 +117,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/forethought/0130b5ac-597a-4f57-99a9-a9a8d6a108ae'>Forethought - ML Engineer, Deep Learning &amp; NLP</a></h5> 
+<h5><a href='https://jobs.lever.co/forethought/0130b5ac-597a-4f57-99a9-a9a8d6a108ae'>Forethought - ML Engineer, Deep Learning &amp; NLP</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -281,7 +281,7 @@ learning, machine learning, natural language processing, computer vision, voice,
 applied deep learning within autonomous vehicles and a strong level of expertise
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/s59exf3smi8dzcecyaxr36upbr'>Performance Engineer - Generalist (Autonomy, Deep Learning, C++, Concurrency, Multi-Threading) | CardinalHire</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/s59exf3smi8dzcecyaxr36upbr'>Performance Engineer - Generalist (Autonomy, Deep Learning, C++, Concurrency, Multi-Threading) | CardinalHire</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-04</p>
 <hr/>
@@ -331,7 +331,7 @@ applied deep learning within autonomous vehicles and a strong level of expertise
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-05-13</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4283353002'>Job Application for Computer Vision and Deep Learning Researchers &amp; Engineers  at Samsung Research America</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/samsungresearchamerica/jobs/4283353002'>Job Application for Computer Vision and Deep Learning Researchers &amp; Engineers  at Samsung Research America</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-13</p>
 <hr/>
@@ -351,7 +351,7 @@ and take on significant leadership and responsibility at a fast-growing startup.
 learning students to conduct new research in one of several project areas. 
 Project?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deepcure.workable.com/j/51A001A451'>DeepCure - Jobs: Deep Learning Engineer - Apply online</a></h5> 
+<h5><a href='https://deepcure.workable.com/j/51A001A451'>DeepCure - Jobs: Deep Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Deep Learning Engineer at DeepCure.</p>
 <hr/>
